--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <!-- Press -->
 
   <div class="press" id="press">
-    <a href=""><img src="images/techcrunch.png" alt="tc-logo"></a>
+    <a href=""><img src="images/TechCrunch.png" alt="tc-logo"></a>
     <a href=""><img src="images/bizinsider.png" alt="biz-insider-logo"></a>
     <a href=""><img src="images/tnw.png" alt="tnw-logo"></a>
   </div>
